2024-02-25T01:07:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8034475138 # 147
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-25
* notice: last 14d: unq all: 1 9
* notice: prev accum: outdated-unq outdated-all / unq all: 762 1210 / 767 1218
* notice: next accum: outdated-unq outdated-all / unq all: 762 1210 / 767 1219
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-02-24]

2024-02-24T08:16:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8029303595 # 145
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-24
* notice: last 14d: unq all: 1 8
* notice: prev accum: outdated-unq outdated-all / unq all: 762 1210 / 766 1217
* notice: next accum: outdated-unq outdated-all / unq all: 762 1210 / 767 1218
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-02-24]

2024-02-24T01:00:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8027026826 # 144
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-24
* notice: last 14d: unq all: 1 7
* notice: prev accum: outdated-unq outdated-all / unq all: 762 1210 / 766 1216
* notice: next accum: outdated-unq outdated-all / unq all: 762 1210 / 766 1217
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-02-23]

2024-02-23T16:17:42Z: