@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-02-25T01:07:15Z",
+  "timestamp" : "2024-02-25T08:16:14Z",
   "count_outdated" : 1210,
   "uniques_outdated" : 762,
-  "count" : 1219,
-  "uniques" : 767,
+  "count" : 1220,
+  "uniques" : 768,
   "clones" : [
     {
       "timestamp": "2024-02-20T00:00:00Z",
@@ -46,6 +46,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-02-25T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
