@@ -1,5 +1,5 @@
 {
-  "count": 9,
+  "count": 10,
   "uniques": 1,
   "clones": [
     {
@@ -25,6 +25,11 @@
     {
       "timestamp": "2024-02-24T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-02-25T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
