@@ -1,3 +1,12 @@
+2024-02-25T08:16:14Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8036596928 # 148
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-25
+* notice: last 14d: unq all: 1 10
+* notice: prev accum: outdated-unq outdated-all / unq all: 762 1210 / 767 1219
+* notice: next accum: outdated-unq outdated-all / unq all: 762 1210 / 768 1220
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-02-25]
+
 2024-02-25T01:07:15Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8034475138 # 147
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-25
